--- a/README.html
+++ b/README.html
@@ -49,7 +49,7 @@
                     <a href="articles/intro.html" title="Articles" class="">Articles</a>
                   </li>
                   <li class="">
-                    <a href="api/" title="Api Documentation" class="">Api Documentation</a>
+                    <a href="api/index.html" title="Api Documentation" class="">Api Documentation</a>
                   </li>
                 </ul>
             </div>
